<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/toSensorList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="50dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/toSensorListBtn"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/toMissingSensorList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/toMissingSensorListBtn"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toSensorList"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/toAccelerometer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/toAccelerometerBtn"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toMissingSensorList"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/toDirection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/toDirectionBtn"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toAccelerometer"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/toFlash"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/toFlashBtn"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toDirection"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"/>

    <Button
        android:id="@+id/toProximity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/toProximityBtn"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toFlash"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>